--- a/_sources/ch02/demo_waves.ipynb
+++ b/_sources/ch02/demo_waves.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11245,7 +11245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -11255,7 +11255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e7b078ff046427797a723aed70bd1b8",
+       "model_id": "5c7d5b3824ca495a9e62066bd36fd75b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -11269,7 +11269,6 @@
    ],
    "source": [
     "@interact(n=(1,10))\n",
-    "\n",
     "def wavef(n=1):\n",
     "    \n",
     "    L=1\n",
@@ -11280,7 +11279,8 @@
     "    \n",
     "    plt.plot(x, y, lw=3, color='red')\n",
     "    \n",
-    "    plt.grid('on')"
+    "    plt.grid('on')\n",
+    "    plt.show()"
    ]
   },
   {
@@ -11320,17 +11320,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
+   "outputs": [],
+   "source": [
+    "def wavef(n1=1, n2=1, phi=0,t=0):\n",
+    "    \n",
+    "    L=1\n",
+    "    omega=1\n",
+    "     \n",
+    "    x = np.linspace(0, +1., 50)\n",
+    "    \n",
+    "    mode1 = np.cos(omega*t) * np.sin(n1*np.pi * x/L)\n",
+    "    \n",
+    "    mode2 = np.cos(omega*t + phi) * np.sin(n2*np.pi * x/L)\n",
+    "    \n",
+    "    plt.plot(x, mode1+mode2, lw=5, color='orange')\n",
+    "    plt.ylim([-2.5, 2.5])\n",
+    "    plt.grid('on')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc4c13d23694458ca28b01fe84460768",
+       "model_id": "48f0f75ceeb64b8e8cb852de50062130",
        "version_major": 2,
        "version_minor": 0
       },
@@ -11343,24 +11366,7 @@
     }
    ],
    "source": [
-    "@interact(n1=(1,5),n2=(1,5),phi=(0,2*np.pi),t=(0,20,0.2))\n",
-    "\n",
-    "def wavef(n1=1,n2=1,phi=0,t=0):\n",
-    "    \n",
-    "    L=1\n",
-    "    omega=1\n",
-    "    \n",
-    "    \n",
-    "    x = np.linspace(0, +1., 50)\n",
-    "    \n",
-    "    mode1 = np.cos(omega*t) * np.sin(n1*np.pi * x/L)\n",
-    "    \n",
-    "    mode2 = np.cos(omega*t + phi) * np.sin(n2*np.pi * x/L)\n",
-    "    \n",
-    "    plt.plot(x, mode1+mode2, lw=5, color='orange')\n",
-    "    plt.show()\n",
-    "    plt.ylim([-2.5,2.5])\n",
-    "    plt.grid('on')"
+    "interactive(wavef, n1=(1,5), n2=(1,5), phi=(0,2*np.pi), t=(0,100,0.1) )"
    ]
   },
   {
@@ -11376,7 +11382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -11386,12 +11392,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8537bf3da8542fea25de270ab4a9d98",
+       "model_id": "21ec70b647154e67bd43769dde43ef10",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=1, description='n1', max=10, min=1), IntSlider(value=1, description='m1'…"
+       "interactive(children=(IntSlider(value=1, description='n', max=10, min=1), IntSlider(value=1, description='m', …"
       ]
      },
      "metadata": {},
@@ -11399,27 +11405,23 @@
     }
    ],
    "source": [
-    "@interact(n1=(1,10),m1=(1,10))\n",
-    "\n",
-    "def membrane(n1=1, m1=1): \n",
+    "@interact(n=(1,10),m=(1,10))\n",
+    "def membrane(n=1, m=1): \n",
     "    \n",
-    "    t=0\n",
-    "    omega=1\n",
+    "    # Constants\n",
+    "    Lx, Ly = 1.0, 1.0  # Dimensions of the rectangular region\n",
+    "    c = 1.0            # Wave speed\n",
     "    \n",
-    "    Lx,Ly = 1,1                       # size of membrane\n",
-    "    N=40                              # number of grid points along X and Y\n",
-    "    \n",
-    "    xs = np.linspace(0,Lx,N)\n",
-    "    ys = np.linspace(0,Ly,N)\n",
-    "    X,Y = np.meshgrid(xs,ys)          # create 2D mesh of points along X and Y\n",
-    "     \n",
+    "    # Create a spatial grid\n",
+    "    Nx, Ny = 100, 100\n",
+    "    x, y  = np.linspace(0, Lx, Nx), np.linspace(0, Ly, Ny)\n",
+    "    X, Y  = np.meshgrid(x, y)\n",
     "\n",
-    "    mode1 = np.sin(n1*np.pi*X/Lx)*np.sin(m1*np.pi*Y/Ly) \n",
-    "\n",
+    "    # Compute spatial part of the normal mode\n",
+    "    spatial_part = np.sin(m * np.pi * X / Lx) * np.sin(n * np.pi * Y / Ly)\n",
     "   \n",
     "    fig, ax =plt.subplots()\n",
-    "    \n",
-    "    ax.contourf(X,Y,mode1,40,cmap='RdBu')"
+    "    ax.contourf(X, Y, spatial_part, 40, cmap='RdBu')"
    ]
   },
   {
@@ -11435,7 +11437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false,
@@ -11443,11 +11445,41 @@
      "slide_type": "fragment"
     }
    },
+   "outputs": [],
+   "source": [
+    "def membrane(n1=1, m1=1, n2=1, m2=1, t=0): \n",
+    "    \n",
+    "    omega=1\n",
+    "    \n",
+    "    L=1                       # size of membrane\n",
+    "    N=40                      # number of grid points along X and Y\n",
+    "    \n",
+    "    x = np.linspace(0,L,N)\n",
+    "    y = np.linspace(0,L,N)\n",
+    "    X,Y = np.meshgrid(x,y)   # create 2D mesh of points along X and Y\n",
+    "     \n",
+    "    mode1 = np.cos(omega*t) * np.sin(n1*np.pi*X/L) * np.sin(m1*np.pi*Y/L) \n",
+    "     \n",
+    "    mode2 = np.cos(omega*t) * np.sin(n2*np.pi*X/L) * np.sin(m2*np.pi*Y/L) \n",
+    "   \n",
+    "        \n",
+    "    fig, ax = plt.subplots(figsize=(9,6))            \n",
+    "    ax      = plt.axes(projection='3d')   # Making a 3D plot     \n",
+    "   \n",
+    "    ax.set_zlim([-2.0, 2.0])\n",
+    "    ax.plot_surface(X, Y, mode1+mode2, cmap='RdYlBu') #Do the Plot \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7696a50778e4a92a646ebc5b45a7650",
+       "model_id": "77a57fa2a40e4f1e94bcf8cdf9b5fad2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -11460,32 +11492,15 @@
     }
    ],
    "source": [
-    "@interact(n1=(1,10),m1=(1,10),n2=(1,10),m2=(1,10),phi=(0,2*np.pi),t=(0,100))\n",
-    "\n",
-    "def membrane(n1=1, m1=1, n2=1, m2=1, phi=0, t=0): \n",
-    "    \n",
-    "    omega=1\n",
-    "    \n",
-    "    L=1                       # size of membrane\n",
-    "    N=40                      # number of grid points along X and Y\n",
-    "    \n",
-    "    x = np.linspace(0,L,N)\n",
-    "    y = np.linspace(0,L,N)\n",
-    "    X,Y = np.meshgrid(x,y)   # create 2D mesh of points along X and Y\n",
-    "     \n",
-    "\n",
-    "    mode1 = np.cos(omega*t) * np.sin(n1*np.pi*X/L) * np.sin(m1*np.pi*Y/L) \n",
-    "     \n",
-    "    mode2 = np.cos(omega*t+phi) * np.sin(n2*np.pi*X/L) * np.sin(m2*np.pi*Y/L) \n",
-    "   \n",
-    "\n",
-    "        \n",
-    "    fig, ax = plt.subplots(figsize=(9,6))            \n",
-    "    ax      = plt.axes(projection='3d')   # Making a 3D plot     \n",
-    "   \n",
-    "    ax.set_zlim([-2.0,2.0])\n",
-    "    ax.plot_surface(X,Y,mode1+mode2,cmap='RdYlBu') #Do the Plot "
+    "interactive(membrane, n1=(1,10), m1=(1,10), n2=(1,10), m2=(1,10), t=(0,100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
