--- a/_sources/ch06/lin_var.ipynb
+++ b/_sources/ch06/lin_var.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "hide-input"
@@ -213,71 +213,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eigenvalues: [ 4.93487481 51.06512519]\n",
-      "First eigenvector: [[-0.66168489]\n",
-      " [-0.74978204]]\n"
+      "Eigenvalues: [ 4.93487481+0.j 51.06512519+0.j]\n",
+      "First eigenvector: [-0.66168489 -0.74978204]\n"
      ]
     }
    ],
    "source": [
-    "# to code this up we are going to set a=1\n",
     "import numpy as np\n",
+    "from scipy.linalg import eig, inv, eigh\n",
+    "\n",
+    "# Lets adopt simpler units\n",
     "a = 1.0\n",
     "hbar = 1.0\n",
     "m = 1.0\n",
     "\n",
-    "S = np.matrix([[1.0/30.0, 1.0/140.0],[1.0/140.0,1.0/630.0]])\n",
-    "H = np.matrix([[1.0/6.0,1.0/30.0],[1.0/30.0,1.0/105.0]])\n",
+    "S = np.array([[1.0/30.0, 1.0/140.0],[1.0/140.0,1.0/630.0]])\n",
+    "H = np.array([[1.0/6.0,1.0/30.0],[1.0/30.0,1.0/105.0]])\n",
     "\n",
-    "e,v = np.linalg.eig(np.dot(np.linalg.inv(S),H))\n",
+    "e, v = eig(inv(S) @ H) #e, v = eigh(H, S) #Same values eigh is for hermitian matrices\n",
     "\n",
     "print(\"Eigenvalues:\", e)\n",
     "print(\"First eigenvector:\", v[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S^{-1} =  [[  840. -3780.]\n",
-      " [-3780. 17640.]]\n",
-      "S^{-1}H =  [[ 14.  -8.]\n",
-      " [-42.  42.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"S^{-1} = \", np.linalg.inv(S))\n",
-    "print(\"S^{-1}H = \", np.dot(np.linalg.inv(S),H))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([51.06512519,  4.93487481])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.roots([1,-56,14*42-42*8])"
    ]
   },
   {
