--- a/_sources/math/note04.ipynb
+++ b/_sources/math/note04.ipynb
@@ -25,14 +25,15 @@
    "source": [
     "### Vectors as Arrays of Numbers\n",
     "\n",
-    "A **vector** is an ordered collection of numbers that can describe various properties of physical or mathematical systems. Some examples include:\n",
+    "We will define **vector**  as an ordered collection of numbers which describes states of physical systems. \n",
     "\n",
     "  - $a = (-2, 8)$: A 2D vector.\n",
     "  - $b = (1.34, 4.23, 5.98)$: A 3D vector.\n",
     "  - $c = (1, -2, 4i, 3 + 2i)$: A 4D vector with complex components.\n",
     "  - $f = (1, 2, 3, 4, 5, 6, \\ldots, \\infty)$: An infinite-dimensional vector with integer components.\n",
     "\n",
-    "**Note**: Vectors can belong to real or complex spaces, depending on their components.\n",
+    "- **Note**: Vectors can belong to real or complex spaces, depending on their components.\n",
+    "\n",
     "\n",
     "### Vectors Defined with Respect to a Basis\n",
     "\n",
@@ -46,29 +47,36 @@
     "\n",
     "- In a different coordinate system or basis, the same vector will have different components, but its intrinsic properties remain unchanged. This flexibility in representation is a fundamental concept in quantum mechanics and linear algebra.\n",
     "\n",
+    "### Row vectors vs column vector\n",
+    "\n",
+    "- We will defined row and column vectors which are related to one another by operation of transpose. They describe the same physical state or coordinate of a system.\n",
+    "\n",
+    "$$\n",
+    "\\begin{pmatrix} a_1 \\\\ a_2 \\end{pmatrix} = (a_1, a_2)^{T}\n",
+    "$$\n",
+    "\n",
+    "- However row vectors live with their own universe of row vectors and column vectors in their own universe of column vectors.\n",
+    "\n",
+    "- Later we will see that to take scalar or dot product row vector needs to be hit with column and vice versa.\n",
     "\n",
     "### Example: Vector expressed in two different basis\n",
     "\n",
-    "Let’s take a 2D vector $\\mathbf{v}$ in the standard Cartesian basis:\n",
+    "Let’s take a 2D vector $\\mathbf{v}$ in the standard Cartesian unit basis:\n",
     "\n",
     "$$\n",
     "\\mathbf{v} = \\begin{pmatrix} 2 \\\\ 3 \\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "This can be written as:\n",
-    "\n",
     "$$\n",
-    "\\mathbf{v} = 2 \\mathbf{e_1} + 3 \\mathbf{e_2}\n",
+    "\\mathbf{v} = 2 \\mathbf{e_1} + 3 \\mathbf{e_2} = 2\\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}+3\\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}\n",
     "$$\n",
     "\n",
-    "- Where: $ \\mathbf{e_1} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}$  and $\\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$\n",
     "\n",
     "Now, suppose we switch to a new basis, where each new basis vector is a scalar multiple of the standard basis vectors. Let’s define the new basis vectors as:\n",
     "\n",
     "$$\n",
     "\\mathbf{b_1} = 2 \\mathbf{e_1} = \\begin{pmatrix} 2 \\\\ 0 \\end{pmatrix}, \\quad \\mathbf{b_2} = 2 \\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 2 \\end{pmatrix}\n",
     "$$\n",
-    "\n",
     "\n",
     "in the new basis, the vector $\\mathbf{v}$ is represented as:\n",
     "\n",
@@ -102,7 +110,7 @@
     "  \n",
     "    $$\\mid a \\rangle = 2 \\mid e_i \\rangle + 3 \\mid e_j \\rangle$$\n",
     "\n",
-    "Vectors can represent a wide range of phenomena, such as the position of a particle in space, the population of countries, or temperature variations in different regions of a forest."
+    "- Vectors can represent a wide range of phenomena, such as the position of a particle in space, the population of countries, or temperature variations in different regions of a forest."
    ]
   },
   {
@@ -111,7 +119,7 @@
    "source": [
     "### Vector Operations\n",
     "\n",
-    "What defines vectors in a mathematical framework are the operations performed on them. Let’s illustrate these operations using a simple 2D vector as an example:\n",
+    "What defines vectors in a mathematical framework are the operations performed on them. Let’s illustrate these operations using a simple 2D vectors $a = (3, 2)$ and $b=(1,1)$ as an example. \n",
     "\n",
     "#### 1. Addition or Subtraction\n",
     "\n",
@@ -172,6 +180,7 @@
     "This system can be written compactly in matrix form as:\n",
     "\n",
     ":::{admonition} **A system of linear equation as matrix vector product**\n",
+    ":class: important \n",
     "\n",
     "$$\n",
     "A \\mathbf{x} = \\mathbf{b}\n",
@@ -288,10 +297,10 @@
     "1. **Shearing and Scaling**. $\\begin{bmatrix} 2 & 1.5 \\\\ 0.5 & 0.75 \\end{bmatrix}$\n",
     "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.75. Additionally, it applies both horizontal and vertical shear, distorting the object by shifting the $x$-coordinate in proportion to the $y$-coordinate and the $y$-coordinate in proportion to the $x$-coordinate. This results in a combination of scaling and shearing, altering both the size and shape of objects.\n",
     "\n",
-    "2. **Scaling**. $\\begin{bmatrix} 2 & 0 \\\\ 0 & 0.5 \\end{bmatrix}$\n",
-    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.5. It changes the size of the object, expanding it in the $x$-direction and compressing it in the $y$-direction, while keeping its shape intact without any angular distortion.\n",
+    "2. **Stretch**. $\\begin{bmatrix} 2 & 0 \\\\ 0 & 1.5 \\end{bmatrix}$\n",
+    "   - This matrix stretches the $x$-direction by 2 and compresses $y$-direction by 1.5. It changes the size of the object, expanding it in the $x$-direction $y$-direction, while keeping its shape intact without any angular distortion.\n",
     "\n",
-    "3. **Stretching**. $\\begin{bmatrix} 3 & 0 \\\\ 0 & 0.75 \\end{bmatrix}$\n",
+    "3. **Stretch/compress**. $\\begin{bmatrix} 3 & 0 \\\\ 0 & 0.75 \\end{bmatrix}$\n",
     "   - This matrix stretches the object by a factor of 3 along the $x$-axis and compresses it by a factor of 0.75 along the $y$-axis. This operation changes the proportions of the object without distorting angles, stretching it non-uniformly.\n",
     "\n",
     "4. **Identity (No Change)**. $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
@@ -316,7 +325,7 @@
     "\n",
     "# Define the transformation matrices\n",
     "shear_scale_matrix = np.array([[2, 1], [0, 0.5]])\n",
-    "scaling_matrix = np.array([[2, 0], [0, 0.5]])\n",
+    "scaling_matrix = np.array([[2, 0], [0, 1.5]])\n",
     "stretching_matrix = np.array([[3, 0], [0, 0.75]])\n",
     "identity_matrix = np.eye(2)\n",
     "\n",
@@ -492,7 +501,6 @@
     "\n",
     "To rotate vectors in the plane, we choose an angle $\\theta$ and write down the matrix that represents the rotation counterclockwise by an angle $\\theta$.  Basic trigonometry can be used to calculate the columns in this case.   \n",
     "\n",
-    "$$\n",
     "\\begin{equation}\n",
     "R = \\left[ \\begin{array}{cc} \\cos\\theta & -\\sin\\theta \\\\ \\sin\\theta & \\cos\\theta \\end{array}\\right]\n",
     "\\end{equation}"
